fix: ajusta dark mode da logo

--- a/src/client/screens/Home/styles.module.css
+++ b/src/client/screens/Home/styles.module.css
@@ -212,14 +212,12 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  html[data-theme="dark"] .vercelLogo {
-    filter: invert(1);
-  }
+html[data-theme="dark"] .vercelLogo {
+  filter: invert(1);
+}
 
-  html[data-theme="dark"] .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
+html[data-theme="dark"] .logo {
+  filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
 }
 
 @keyframes rotate {
